# arduck

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  changelog.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/_autosummary/: arduck.doctree
.doctrees/scripts/: main.doctree
_autosummary/: arduck.html
_sources/_autosummary/: arduck.rst.txt
_sources/scripts/: main.rst.txt
scripts/: main.html
src/arduck/: cli.py  tokenizer.py
src/arduck/arduino/: __init__.py  keyboard.py
src/arduck/modules/: preset.py  template.py
src/arduck/parsers/: __init__.py  main.py  types.py
src/arduck/parsers/presets/: __init__.py  sclogon.py  types.py
src/arduck/parsers/presets/win/: __init__.py  sclogon.py
src/arduck/presets/win/: aterm.py  run.py  sclogon.py
src/arduck/templates/: any  any.default  win.altkeys
src/arduck/templates/_components/: any  base
src/arduck/templates/_components/windows/: alt_codes
src/arduck/templates/win/: alt  run
src/arduck/templates/win/a/: init  run
src/arduck/templates/win/xmenu/: aterm
